--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,7 @@
 @import "tailwindcss";
-/* Apply orange background to table headers */
 .custom-orange-table .ant-table-thead>tr>th {
     @apply bg-orange-500 text-white text-center font-bold;
+}
+.orange-switch.ant-switch-checked {
+    background-color: #f97316 !important;
 }
